--- a/main.css
+++ b/main.css
@@ -25,116 +25,7 @@ padding:0px;
 margin:0px;
 overflow:hidden; /*DISABLE IF YOU WANT YOUR SITE TO SCROLL*/
 overflow-x:hidden;
-}
-
-
-
-#top{
-box-shadow:0px 2px 8px rgba(0,0,0,0.2); 
-background-color:#2196f3;
-padding:20px 10px;
-}
-
-#title {
-color:white;
-display:inline;
-vertical-align:middle;
-font-size:120%;
-}
-
-#comframe {
-width:100%;
-height:100%;
-}
-
-#commentsystemall {
-height:100%;
-}
-
-#main-comments {
-width:100%;
-height:100%;
-overflow:scroll;
-overflow-x:hidden;
-background-color:white;
-}
-
-#maincomcontain {
-overflow:hidden;
-height:calc(100% - 300px);
-}
-
-#refresh {
-border:none;
-background-color:#2196f3;
-float:right;
-vertical-align:middle;
-margin-top:5px;
-padding:0;
-height:28px;
-overflow:hidden;
-transition:.5s all ease-in-out;
-}
-
-#refresh:active{
-/*transform:rotate(360deg);*/
-}
-
-.spinny {
--webkit-animation:rotation 1s 1;
--webkit-animation-delay:-.2s;
-}
-
-
-@-webkit-keyframes rotation {
-        from {transform:rotate(0deg);}
-        to {transform:rotate(360deg);}
-    }
-
-
-
-
-
-/*form*/
-
-#combox{
-padding:5px;
-background-color:rgb(250,250,250);
-border:1px solid rgb(240,240,240);
-}
-
-
-#status {
-font-weight:100;
-margin:15px;
-}
-.noshow {
-display:none;
-}
-.error {
-display:initial;
-color:#F44336;
-}
-.success {
-display:initial;
-color:#4CAF50;
-}
-
-#comment {
-margin-top:5px;
-}
-
-.tb {
-outline:0;
-border-radius:2px;
-border:1px solid rgb(248,248,248);
-padding:8px;
-width:80%;
-font-size:85%;
-}
-
-.tb::-webkit-input-placeholder {
-color:lightgray;
+background-color:whitesmoke;
 }
 
 .formbtn {
