--- a/main.css
+++ b/main.css
@@ -36,6 +36,8 @@ background-color:whitesmoke;
   border-radius:5px;
   border:1px solid silver;
   vertical-align:middle;
+  padding:50px;
+  background-color:white;
 }
 
 .formbtn {
