--- a/main.css
+++ b/main.css
@@ -44,6 +44,10 @@ background-color:whitesmoke;
   box-shadow:0px 3px 10px rgba(0,0,0,.2);*/
 }
 
+img:hover {
+  transform:scale(1.1,1.1);
+}
+
 .formbtn {
 text-decoration:none;
 background-color:#2196f3;
