--- a/main.css
+++ b/main.css
@@ -43,6 +43,9 @@ background-color:whitesmoke;
   background-color:white;
   box-shadow:0px 3px 10px rgba(0,0,0,.2);*/
 }
+#load {
+  width:50%;padding:20px;outline:none;border-top:1px solid silver;border-radius:0px;margin-top:50px;
+}
 
 img:hover {
   transform:scale(1.1,1.1);
