--- a/main.css
+++ b/main.css
@@ -47,6 +47,10 @@ background-color:whitesmoke;
   width:50%;padding:20px;outline:none;border-top:1px solid silver;border-radius:0px;margin-top:50px;
 }
 
+iframe {
+width:calc(100% - 4px);height:500px;outline:none;border:2px solid silver;border-radius:10px;margin-top:50px;
+}
+
 img:hover {
   transform:scale(1.1,1.1);
 }
